Обновление проекта "Тонущий мир": изменены метаданные и настройки отображения для раздела "_lore", добавлены новые кнопки для создания деревни, шахты и фермы, обновлены описания и хронология событий, улучшены элементы взаимодействия с пользователем.

--- a/Локации/Локации.md
+++ b/Локации/Локации.md
@@ -1,100 +1,68 @@
 <div class="button-row">
 
-  
-
 ```button
-
 class create-button
-
 name ![[создать_мир.jpg|Создать новый мир]]
-
 type command
-
 action Literary Templates: Создать новый мир/проект
-
 ```
-
 ```button
-
 class create-button
-
 name ![[Создать_государство.jpg|Создать государство]]
-
 type command
-
 action Literary Templates: Создать государство
-
 ```
-
 ```button
-
 class create-button
-
 name ![[Создать_провинцию.jpg|Создать провинцию]]
-
 type command
-
 action Literary Templates: Создать провинцию
-
 ```
-
 ```button
-
 class create-button
-
 name ![[создать_город.jpg|Создать город]]
-
 type command
-
 action Literary Templates: Создать город
-
 ```
-
-  
+```button
+class create-button
+name ![[создать_деревню.jpg|Создать деревню]]
+type command
+action Literary Templates: Создать деревню
+```
+```button
+class create-button
+name ![[создать_шахту.jpg|Создать шахту]]
+type command
+action Literary Templates: Создать шахту
+```
+```button
+class create-button
+name ![[создать_ферму.jpg|Создать ферму]]
+type command
+action Literary Templates: Создать ферму
+```
 
 </div>
-
-  
-
 <div class="button-row">
 
-  
-
 ```button
-
 name ⛏️
-
 color orange
-
 type command
-
 action Literary Templates: Создать шахту
-
 ```
-
 ```button
-
 name 🏘️
-
 color yellow
-
 type command
-
 action Literary Templates: Создать деревню
-
 ```
-
 ```button
-
 name 🐮
-
 type command
-
 action Literary Templates: Создать ферму
-
 ```
-
-  
 
 </div>
 
