--- a/Локации/Провинции/Ютаборг.md
+++ b/Локации/Провинции/Ютаборг.md
@@ -43,7 +43,7 @@ epochs: Средневековье
 - **Численность населения:** 1 миллион
 
 ## Хронология
-- -1994: Начало экспансии месов с островов. Война с ютерами, Остались лишь немногочисленные туины, остатки отступили в Тёмный лес
+- -1994: Начало экспансии месов с островов. Война с ютерами, Остались лишь немногочисленные руины, остатки отступили в Тёмный лес
 - -1670: Появлвние иценов, война за территорию
 - -1650: бутва у Бергена. Перемирие
 
