--- a/Справочник/Социальное_и_психологическое.md
+++ b/Справочник/Социальное_и_психологическое.md
@@ -9,19 +9,261 @@ name: "Социальное и психологическое"
 > Статус: {{status}}
 
 ## Обратить внимание на
-- Классы и касты; расовые отношения; гендерные роли
-- Социальные нормы; брачные обычаи
-- Рабство и освобождение; профессии и ремесла; социальные движения
-- Страхи и фобии; мечты и амбиции; суеверия
-- Коллективное бессознательное
-- Манипуляции и пропаганда; культ личности
+
+### Классы и касты; расовые отношения; гендерные роли
+
+**Социальные классы:**
+
+- **Аристократия** - высшее сословие, обладающее наследственными привилегиями
+- **Буржуазия** - средний класс, основанный на торговле, промышленности и капитале
+- **Мелкая буржуазия** - мелкие торговцы, ремесленники, чиновники
+- **Пролетариат** - рабочий класс, промышленные трудяги
+- **Крестьянство** - сельское население, земледельцы
+- **Маргиналы** - социальные outsiders, нищие, бродяги
+
+**Кастовая система:**
+
+- **Открытые касты** - возможность перехода между кастами через достижения
+- **Закрытые касты** - наследственные, неперемещаемые социальные группы
+- **Ритуальная чистота** - требования к взаимодействию между кастами
+- **Профессиональная специализация** - закрепление профессий за кастами
+- **Магические касты** - касты, основанные на магических способностях
+
+**Расовые отношения:**
+
+- **Доминирующие расы** - расы с политической и экономической властью
+- **Подчиненные расы** - расы, находящиеся в подчиненном положении
+- **Метисы** - представители смешанных рас
+- **Генетическая дискриминация** - предрассудки и дискриминация по расовым признакам
+- **Культурная ассимиляция** - процесс слияния расовых и культурных групп
+
+**Гендерные роли:**
+
+- **Патриархальные общества** - мужчины обладают доминирующим положением
+- **Матриархальные общества** - женщины обладают доминирующим положением
+- **Эгалитарные общества** - равенство полов
+- **Функциональное разделение** - распределение ролей между полами
+- **Гендерные стереотипы** - культурные представления о поведении полов
+
+**Сюжетные возможности:**
+
+- Социальное восхождение как движущая сила персонажа
+- Конфликты между классами и кастами как основа драмы
+- Расовые предрассудки как источник конфликтов
+- Преодоление гендерных ограничений как путь героя
+- Революции и социальные потрясения как фон для событий
+
+### Социальные нормы; брачные обычаи
+
+**Социальные нормы:**
+
+- **Формальные нормы** - законы, правила, официальные ожидания поведения
+- **Неформальные нормы** - неписаные правила, традиции, обычаи
+- **Моральные нормы** - представления о добре и зле, правильном и неправильном
+- **Религиозные нормы** - требования и запреты, основанные на вере
+- **Магические нормы** - ограничения и правила, связанные с использованием магии
+
+**Брачные обычаи:**
+
+- **Моногамия** - брак между двумя людьми
+- **Полигамия** - брак с несколькими партнерами
+- **Полиандрия** - женщина имеет нескольких мужей
+- **Групповой брак** - несколько мужчин и женщин в браке
+- **Временные браки** - браки на определенный срок
+
+**Семейные структуры:**
+
+- **Нуклеарная семья** - родители и дети
+- **Расширенная семья** - включает бабушек, дедушек, дядей, тетей
+- **Патриархальная семья** - главенствующая роль отца/деда
+- **Матриархальная семья** - главенствующая роль матери/бабушки
+- **Эгалитарная семья** - равенство всех членов семьи
+
+**Обряды инициации:**
+
+- **Детские ритуалы** - обряды рождения, нарезания зубов, первого слова
+- **Подростковые ритуалы** - переход от детства к взрослой жизни
+- **Взрослые ритуалы** - посвящение в воины, ремесленники, жрецы
+- **Пожилые ритуалы** - переход к статусу старейшин
+- **Магические инициации** - посвящение в маги, колдуны, шаманы
+
+**Сюжетные возможности:**
+
+- Нарушение социальных норм как путь к конфликту
+- Брачные обычаи как источник драмы и напряжения
+- Семейные тайны и конфликты как движущая сила сюжета
+- Обряды инициации как испытания персонажей
+- Изменение социальных норм как отражение изменений в обществе
+
+### Рабство и освобождение; профессии и ремесла; социальные движения
+
+**Рабство и освобождение:**
+
+- **Формы рабства** - военнопленные, должники, наследственное рабство
+- **Условия жизни рабов** - работа, питание, жилье, наказания
+- **Сопротивление рабства** - восстания, побеги, подпольные организации
+- **Пути освобождения** - покупка свободы, амнистии, помощь со стороны
+- **Послерабство** - положение бывших рабов в обществе
+
+**Профессии и ремесла:**
+
+- **Интеллектуальные профессии** - ученые, маги, врачи, юристы
+- **Военные профессии** - солдаты, офицеры, наемники, шпионы
+- **Торговые профессии** - торговцы, банкиры, брокеры, посредники
+- **Ремесленные профессии** - кузнецы, плотники, ткачи, гончары
+- **Сервисные профессии** - слуги, работники таверн, проститутки
+
+**Социальные движения:**
+
+- **Реформаторские движения** - стремление к изменениям в рамках системы
+- **Революционные движения** - стремление к полной смене системы
+- **Освободительные движения** - борьба за свободу определенных групп
+- **Религиозные движения** - стремление к распространению веры или реформам
+- **Магические движения** - объединения магов, борьба за контроль над магией
+
+**Социальная мобильность:**
+
+- **Восходящая мобильность** - продвижение вверх по социальной лестнице
+- **Нисходящая мобильность** - падение вниз по социальной лестнице
+- **Горизонтальная мобильность** - перемещение между равными социальными группами
+- **Межпоколенная мобильность** - изменение социального положения между поколениями
+- **Индивидуальная и групповая мобильность** - личное продвижение или изменение положения группы
+
+**Сюжетные возможности:**
+
+- Путь из рабства к свободе как основа героического сюжета
+- Раб не стремится к свободе, он стремится стать рабовладельцем
+- Свободный человек свободен и в оковах, раб же и на троне останется рабом (показать, что сила духа может быть сопоставима с внешним положением)
+- Конфликты между профессиями и ремеслами
+- Социальные движения как движущая сила исторических изменений
+- Социальная мобильность как цель или испытание персонажа
+- Моральные дилеммы, связанные с социальным неравенством
+
+### Страхи и фобии; мечты и амбиции; суеверия
+
+**Страхи и фобии:**
+
+- **Инстинктивные страхи** - боязнь высоты, темноты, замкнутых пространств
+- **Социальные страхи** - боязнь публичных выступлений, насмешек, одиночества
+- **Сверхъестественные страхи** - страх перед призраками, монстрами, магией
+- **Психологические травмы** - последствия насилия, потерь, катастроф
+- **Коллективные страхи** - общие опасения общества перед определенными явлениями
+
+**Мечты и амбиции:**
+
+- **Личные мечты** - стремления к счастью, любви, самореализации
+- **Социальные амбиции** - стремление к власти, богатству, признанию
+- **Творческие стремления** - желание создавать произведения искусства
+- **Альтруистические цели** - стремление помогать другим, служить обществу
+- **Мессианские идеи** - вера в собственное предназначение спасти мир
+
+**Суеверия:**
+
+- **Домашние суеверия** - приметы, связанные с бытом и повседневной жизнью
+- **Профессиональные суеверия** - верования, связанные с определенными профессиями
+- **Религиозные суеверия** - приметы, связанные с верой и обрядами
+- **Магические суеверия** - вера в защиту амулетов, заклинания, ритуалы
+- **Сезонные суеверия** - поверья, связанные с праздниками и временами года
+
+**Психологические механизмы:**
+
+- **Отрицание** - отказ признавать реальность угрозы или проблемы
+- **Проекция** - приписывание собственных чувств другим
+- **Рационализация** - поиск логических объяснений эмоциональным поступкам
+- **Сублимация** - преобразование негативных импульсов в социально приемлемые действия
+- **Регрессия** - возврат к более ранним формам поведения в стрессовых ситуациях
+
+**Сюжетные возможности:**
+
+- Преодоление страхов как путь героя
+- Амбиции как движущая сила или трагическая слабость персонажа
+- Суеверия как источник конфликтов или помощи
+- Психологические механизмы как объяснение поступков персонажей
+- Внутренние конфликты как основа драмы
+
+### Коллективное бессознательное
+
+**Архетипы:**
+
+- **Герой** - персонаж, преодолевающий трудности и спасающий других
+- **Тень** - темная сторона личности, скрытые желания и импульсы
+- **Мудрец** - источник знаний и наставлений
+- **Мать** - защитница, заботящаяся о других
+- **Трикстер** - хитрец, нарушающий социальные нормы
+
+**Коллективные образы:**
+
+- **Мифологические существа** - драконы, фениксы, единороги
+- **Исторические фигуры** - вожди, пророки, мученики
+- **Символические образы** - свет и тьма, добро и зло
+- **Природные явления** - как олицетворения сил природы
+- **Магические артефакты** - предметы, обладающие особой силой
+
+**Культурная память:**
+
+- **Наследие предков** - традиции, передаваемые из поколения в поколение
+- **Исторические травмы** - коллективные воспоминания о катастрофах
+- **Культурные коды** - общие символы и значения в культуре
+- **Мифы и легенды** - истории, объясняющие устройство мира
+- **Религиозные сюжеты** - священные истории и учения
+
+**Сюжетные возможности:**
+
+- Архетипы как основа создания персонажей
+- Коллективные образы как символы в сюжете
+- Культурная память как источник конфликтов и примирения
+- Использование коллективного бессознательного для создания глубоких метафор
+- Влияние коллективного бессознательного на принятие решений персонажами
+
+### Манипуляции и пропаганда; культ личности
+
+**Манипуляции:**
+
+- **Психологическое давление** - использование страха, вины, сочувствия
+- **Дезинформация** - распространение ложной информации
+- **Изоляция** - отрыв человека от других источников информации
+- **Создание зависимости** - формирование зависимости от манипулятора
+- **Магические методы** - использование заклинаний и чар для влияния
+
+**Пропаганда:**
+
+- **Повторение** - многократное повторение одного и того же сообщения
+- **Эмоциональное воздействие** - использование страха, надежды, ненависти
+- **Упрощение** - сведение сложных вопросов к простым формулам
+- **Авторитеты** - использование мнения известных личностей
+- **Массмедиа** - контроль над средствами массовой информации
+
+**Культ личности:**
+
+- **Идеализация лидера** - представление лидера как совершенного человека
+- **Мифологизация биографии** - создание легендарной истории жизни
+- **Контроль информации** - ограничение доступа к правдивой информации
+- **Ритуалы почитания** - обязательные церемонии прославления
+- **Подавление оппозиции** - устранение критиков и конкурентов
+
+**Сопротивление манипуляциям:**
+
+- **Критическое мышление** - способность анализировать информацию
+- **Разнообразие источников** - получение информации из разных источников
+- **Социальная поддержка** - наличие доверительных отношений с другими
+- **Психологическая устойчивость** - уверенность в себе и своих убеждениях
+- **Образование** - уровень знаний, позволяющий распознавать манипуляции
+
+**Сюжетные возможности:**
+
+- Манипуляции как способ создания конфликтов
+- Пропаганда как фон для развития сюжета
+- Культ личности как антагонистическая сила
+- Преодоление манипуляций как путь героя
+- Этические дилеммы, связанные с использованием методов влияния
 
 ## Идеологии и классовая борьба
+
 - **Идеологии**: консерватизм/прогрессивизм; авторитаризм/анархия; коллективизм/индивидуализм; национализм/космополитизм; фундаментализм; утопии/дистопии
 - **Классовая борьба**: буржуазия/аристократия; крестьяне/землевладельцы; рабы/господа; гильдии/корона; церковь/государство, буржуазия/пролетариат; кастовые конфликты
 - **Формы протеста**: восстания и революции; забастовки; подполье; саботаж; петиции и реформы
 
 ## Связи
+
 - Государственные доктрины/цензура/экспорт идеологий — см. [[Справочник/Геополитика_и_экономика]]
 - Искусство как пропаганда/символика режимов — см. [[Справочник/Культура_и_религия]]
-
