--- a/Справочник/Сюжет_и_персонажи.md
+++ b/Справочник/Сюжет_и_персонажи.md
@@ -14,7 +14,7 @@ name: "Сюжет и персонажи"
 - Конфликт
 - Концепция
 - Тематика
-- Мотивация персонажей
+- Мотивация персонажей и их мотивировка: Чего он хочет на самом деле и как объясняет это себе и окружающим
 - Фабула (хронология событий)
 - Предыстория мира
 - Жанр
