--- a/Справочник/Технологии_и_инфраструктура.md
+++ b/Справочник/Технологии_и_инфраструктура.md
@@ -9,20 +9,345 @@ name: "Технологии и инфраструктура"
 > Статус: {{status}}
 
 ## Обратить внимание на
-- Уровень технологии (TL)
-- Инструменты, оружие и броня
-- Технологии будущего, альтернативные технологии
-- Робототехника, кибернетика, экспериментальные разработки
-- Энергетические источники
+
+### Уровень технологии (TL)
+
+**Технологические уровни:**
+
+- **TL0 - Каменный век** - использование природных материалов, огонь, простые инструменты
+- **TL1 - Бронзовый/Железный век** - металлургия, сельское хозяйство, письменность
+- **TL2 - Средневековье** - механика, водяные мельницы, базовая инженерия
+- **TL3 - Возрождение/Просвещение** - паровые двигатели, базовая химия, телескопы
+- **TL4 - Промышленная революция** - железные дороги, телеграф, массовое производство
+- **TL5 - Современность** - автомобили, радио, электричество, авиация
+- **TL6 - Цифровая эпоха** - компьютеры, интернет, мобильная связь
+- **TL7 - Будущее** - искусственный интеллект, квантовые технологии, нанотехнологии
+- **TL8 - Фантастика** - межзвездные путешествия, телепортация, управление материей
+
+**Магические уровни:**
+
+- **ML0 - Архаичная магия** - природные чары, шаманские практики, простые заклинания
+- **ML1 - Рудиментарная магия** - алхимия, ритуалы, базовые магические инструменты
+- **ML2 - Классическая магия** - школы магии, магические университеты, волшебные предметы
+- **ML3 - Высшая магия** - управление стихиями, создание артефактов, магические порталы
+- **ML4 - Архимагия** - воскрешение, превращения, управление временем и пространством
+- **ML5 - Божественная магия** - вмешательство в фундаментальные законы реальности
+
+В отличие от технологических уровней, магические уровни могут пересекаться и сосуществовать с технологическими. Мир может иметь высокий технологический уровень (TL5-TL8), но также развивать магию на уровне ML3 или ML4. Такое сочетание может привести к уникальным гибридным решениям: магически усиленные компьютеры, заклинания мгновенной связи вместо телефонов, магические двигатели для транспорта и т.д.
+
+Магические уровни также могут быть локальными - в разных регионах мира магия может развиваться по-разному. Это создает интересные сюжетные возможности, когда персонажи сталкиваются с магией, отличной от той, что они знают.
+
+**Факторы развития:**
+
+- **Ресурсы** - доступ к сырью, энергии, знаниям
+- **Социальные условия** - стабильность, образование, экономическая система
+- **Географические особенности** - климат, доступ к морю, минеральные богатства
+- **Внешние влияния** - торговля, завоевания, культурный обмен
+- **Катастрофы и ограничения** - войны, эпидемии, природные катастрофы
+
+**Сюжетные возможности:**
+
+- Технологический разрыв между культурами как источник конфликтов
+- Примитивная культура, обладающая одной передовой технологией
+- Откат технологий после катастрофы
+- Сингулярность и её последствия для общества
+- Конфликты между традиционными и новыми технологиями
+
+### Инструменты, оружие и броня
+
+**Инструменты:**
+
+- **Сельскохозяйственные инструменты** - плуги, серпы, молотилки
+- **Строительные инструменты** - молоты, пилы, отвесы, уровень
+- **Ремесленные инструменты** - ножи, молотки, клещи, напильники
+- **Научные инструменты** - микроскопы, телескопы, измерительные приборы
+- **Магические инструменты** - жезлы, кристаллы, алхимические наборы
+
+**Оружие:**
+
+- **Холодное оружие** - мечи, копья, топоры, кинжалы
+- **Метательное оружие** - луки, арбалеты, пращи, метательные ножи
+- **Огнестрельное оружие** - пистолеты, винтовки, пулеметы, артиллерия
+- **Энергетическое оружие** - лазеры, плазменные пушки, ионные винтовки
+- **Магическое оружие** - заклинания, зачарованные клинки, элементальное оружие
+
+**Броня:**
+
+- **Легкая броня** - кожаная, тканая, пластиковая
+- **Средняя броня** - кольчуга, чешуйчатая, пластинчатая
+- **Тяжелая броня** - латы, силовые костюмы, экзоскелеты
+- **Энергетическая защита** - силовые поля, энергетические щиты
+- **Магическая защита** - заклинания защиты, амулеты, зачарованная броня
+
+**Сюжетные возможности:**
+
+- Оружие как символ власти или социального статуса
+- Конфликты между воинами разных школ/культур
+- Эволюция военного дела и её влияние на общество
+- Моральные дилеммы, связанные с применением технологий убийства
+- Личное оружие как элемент характера персонажа
+
+### Технологии будущего, альтернативные технологии
+
+**Технологии будущего:**
+
+- **Биотехнологии** - генная инженерия, клонирование, синтетическая биология
+- **Нанотехнологии** - манипуляции на атомном уровне, нанороботы
+- **Искусственный интеллект** - машины, превосходящие человеческий интеллект
+- **Квантовые технологии** - квантовые компьютеры, телепортация, квантовая связь
+- **Космические технологии** - межзвездные корабли, терраформирование, колонизация
+
+**Альтернативные технологии:**
+
+- **Магические технологии** - магия как замена технологиям
+- **Псионические технологии** - психические способности как инструмент
+- **Биологические технологии** - живые машины, органические компьютеры
+- **Элементальные технологии** - управление стихиями как технологический процесс
+- **Духовные технологии** - взаимодействие с потусторонним миром как технология
+
+**Сюжетные возможности:**
+
+- Этические дилеммы, связанные с новыми технологиями
+- Конфликты между сторонниками разных технологических путей
+- Непредвиденные последствия технологических прорывов
+- Технологии как источник власти и неравенства
+- Выбор между прогрессом и сохранением традиций
+
+### Робототехника, кибернетика, экспериментальные разработки
+
+**Робототехника:**
+
+- **Промышленные роботы** - автоматизация производства и тяжелых работ
+- **Служебные роботы** - домашние помощники, медицинские роботы
+- **Военные роботы** - дроны, боевые машины, автоматические охранники
+- **Андроиды** - роботы, похожие на людей
+- **Искусственный интеллект** - не обязательно физическая форма, но интеллектуальная мощь
+
+**Кибернетика:**
+
+- **Медицинская кибернетика** - протезы, импланты, улучшение функций организма
+- **Военная кибернетика** - усиление солдат, боевые импланты
+- **Информационная кибернетика** - прямое подключение к сетям, расширение памяти
+- **Эстетическая кибернетика** - импланты для изменения внешности
+- **Магическая кибернетика** - сочетание магии и технологий
+
+**Экспериментальные разработки:**
+
+- **Телепортация** - мгновенное перемещение объектов и существ
+- **Телекинез** - управление объектами силой мысли
+- **Телепатия** - прямая передача мыслей между существами
+- **Манипуляции временем** - ускорение, замедление, путешествия во времени
+- **Контроль над реальностью** - изменение законов физики в локальных зонах
+
+**Сюжетные возможности:**
+
+- Вопросы идентичности при наличии кибернетических имплантов
+- Конфликты между людьми и искусственным интеллектом
+- Этические дилеммы, связанные с экспериментальными технологиями
+- Роботы как отражение человеческих качеств
+- Технологии как инструмент бессмертия или уничтожения
+
+### Энергетические источники
+
+**Традиционные источники:**
+
+- **Биомасса** - дрова, уголь, нефть, природный газ
+- **Гидроэнергия** - водяные колеса, гидроэлектростанции
+- **Ветроэнергия** - ветряные мельницы, ветрогенераторы
+- **Солнечная энергия** - солнечные батареи, солнечные печи
+- **Геотермальная энергия** - использование внутреннего тепла планеты
+
+**Передовые источники:**
+
+- **Ядерная энергия** - деление и синтез атомов
+- **Аннигиляция** - преобразование материи в энергию
+- **Нулевая энергия** - использование энергии вакуума
+- **Магическая энергия** - манипуляции магическими силами
+- **Псионическая энергия** - использование психических способностей
+
+**Сюжетные возможности:**
+
+- Конфликты за контроль над энергетическими ресурсами
+- Энергетические кризисы как катализатор событий
+- Переход от одного типа энергии к другому как социальный процесс
+- Энергия как валюта или источник власти
+- Экологические последствия различных источников энергии
 
 ## Инфраструктура
-- Водоснабжение, энергоснабжение, отходы, захоронение
-- Транспортные модальности
-- Связь и информационные сети; стандарты/протоколы
-- Образование, агрокультура
-- Городское планирование
+
+### Водоснабжение, энергоснабжение, отходы, захоронение
+
+**Водоснабжение:**
+
+- **Источники воды** - реки, озера, колодцы, артезианские скважины
+- **Системы очистки** - фильтрация, хлорирование, ультрафиолетовая обработка
+- **Распределение** - трубопроводы, водонапорные башни, насосные станции
+- **Хранение** - резервуары, цистерны, подземные хранилища
+- **Магические системы** - очищение воды заклинаниями, создание воды
+
+**Энергоснабжение:**
+
+- **Производство энергии** - электростанции, генераторы, солнечные панели
+- **Передача энергии** - линии электропередач, трансформаторы
+- **Распределение** - подстанции, счетчики, системы управления
+- **Хранение энергии** - аккумуляторы, конденсаторы, маховики
+- **Магическое энергоснабжение** - кристаллы энергии, магические генераторы
+
+**Отходы и захоронение:**
+
+- **Бытовые отходы** - система сбора, переработка, сжигание
+- **Промышленные отходы** - специальная обработка опасных веществ
+- **Биологические отходы** - сточные воды, навоз, органические отходы
+- **Радиоактивные отходы** - специальные хранилища, изоляция
+- **Магические отходы** - нейтрализация магического загрязнения
+
+**Сюжетные возможности:**
+
+- Кризисы инфраструктуры как движущая сила сюжета
+- Конфликты за доступ к жизненно важным ресурсам
+- Экологические катастрофы как результат пренебрежения инфраструктурой
+- Инфраструктура как символ цивилизации или упадка
+- Восстановление инфраструктуры как путь к процветанию
+
+### Транспортные модальности
+
+**Наземный транспорт:**
+
+- **Пешеходный** - основной вид передвижения в большинстве обществ
+- **Животный** - лошади, мулы, верблюды, слоны
+- **Механический** - автомобили, поезда, тракторы
+- **Магический** - летающие ковры, телепортация, заклинания скорости
+- **Альтернативный** - антигравитационные платформы, телекинетический транспорт
+
+**Водный транспорт:**
+
+- **Примитивный** - плоты, бревна, кожаные лодки
+- **Парусный** - яхты, корабли, катера
+- **Механический** - пароходы, дизельные суда, катера
+- **Магический** - живые корабли, призрачные галеры
+- **Подводный** - подлодки, подводные города
+
+**Воздушный транспорт:**
+
+- **Естественный** - полет на птицах, крыльями
+- **Механический** - самолеты, вертолеты, дирижабли
+- **Магический** - полетные заклинания, волшебные существа
+- **Альтернативный** - левитация, антигравитация
+- **Космический** - корабли для путешествий в космосе
+
+**Сюжетные возможности:**
+
+- Путешествия как способ расширения кругозора персонажей
+- Транспорт как символ статуса или власти
+- Конфликты за контроль над транспортными путями
+- Изоляция сообществ из-за отсутствия транспорта
+- Технологические прорывы в транспорте как изменение мира
+
+### Связь и информационные сети; стандарты/протоколы
+
+**Связь:**
+
+- **Личная** -面对面 (лицом к лицу), жесты, крик, барабаны
+  - *面对面 (лицом к лицу)*: Самая прямая форма общения, при которой участники могут видеть выражение лиц, язык тела и другие невербальные сигналы. Эта форма общения наиболее эффективна для установления доверия, передачи эмоций и разрешения конфликтов. В литературе может служить кульминацией напряженных отношений или важных переговоров.
+  - *Жесты*: Невербальная коммуникация, включая языки жестов, телесные сигналы и другие формы немого общения.
+  - *Крик*: Используется для передачи сообщений на большие расстояния или в экстренных ситуациях.
+  - *Барабаны*: Ритмическая коммуникация, часто используемая в традиционных культурах для передачи сообщений на большие расстояния.
+
+- **Механическая** - почта, телеграф, телефон
+  - *Почта*: Традиционная форма письменной коммуникации, требующая физической доставки сообщений. Может быть медленной, но надежной. В литературе может создавать задержки в сюжете или использоваться для тайных переговоров.
+  - *Телеграф*: Быстрая передача текстовых сообщений на большие расстояния по проводам. Позволяет передавать срочные сообщения, но требует специального оборудования и знаний кода Морзе или других телеграфных кодов.
+  - *Телефон*: Позволяет голосовую коммуникацию в реальном времени на расстоянии. Создает более личную связь, чем телеграф, но менее интимную, чем личная встреча. Может быть использован для диалогов, признания или тайных разговоров.
+
+- **Электронная** - радио, телевидение, интернет
+  - *Радио*: Односторонняя или двусторонняя аудио коммуникация на большие расстояния. Может использоваться для широковещательных сообщений, новостей или секретной связи. В литературе может быть средством получения информации или связи с внешним миром.
+  - *Телевидение*: Видео коммуникация с возможностью широковещательной передачи. Позволяет передавать не только информацию, но и визуальные образы, что делает её мощным инструментом пропаганды или развлечения.
+  - *Интернет*: Глобальная сеть, позволяющая мгновенно обмениваться информацией любого типа между любыми точками мира. В литературе может служить как средством связи, так и источником конфликтов, связанных с кибербезопасностью, дезинформацией или слежкой.
+
+- **Магическая** - магические зеркала, телепатия, заклинания передачи
+  - *Магические зеркала*: Позволяют видеть и разговаривать с другими людьми на расстоянии через магически связанные объекты. Могут быть ограничены по количеству пользователей или требовать редких компонентов для создания.
+  - *Телепатия*: Прямая передача мыслей между людьми без использования физических средств. Может быть ограниченной по расстоянию или требовать специальной подготовки. Может создавать вопросы конфиденциальности и личных границ.
+  - *Заклинания передачи*: Различные магические методы передачи сообщений, от магических голубей до световых сигналов. Часто требуют специальных компонентов или ритуалов для активации.
+
+- **Квантовая** - мгновенная передача информации на любые расстояния
+  - *Квантовая связь*: Использование квантовых свойств для мгновенной передачи информации вне зависимости от расстояния. Может быть ограничена сложностью оборудования или необходимостью квантовой запутанности между отправителем и получателем. В литературе может служить элементом научной фантастики высокого уровня.
+
+**Информационные сети:**
+
+- **Библиотеки** - централизованное хранение знаний
+- **Интернет** - глобальная сеть информации
+- **Магические сети** - обмен знаниями через магические кристаллы
+- **Псионические сети** - коллективное сознание
+- **Искусственный интеллект** - глобальные системы хранения и обработки информации
+
+**Стандарты и протоколы:**
+
+- **Технические стандарты** - размеры, совместимость, качество
+- **Коммуникационные протоколы** - правила обмена информацией
+- **Магические стандарты** - унификация заклинаний и ритуалов
+- **Социальные протоколы** - правила общения и взаимодействия
+- **Юридические стандарты** - законы и правила поведения
+
+**Сюжетные возможности:**
+
+- Информация как оружие или инструмент власти
+- Конфликты между открытым и закрытым доступом к информации
+- Дезинформация как способ управления обществом
+- Развитие коммуникаций как фактор социальных изменений
+- Информационные технологии как источник неравенства
+
+### Образование, агрокультура
+
+**Образование:**
+
+- **Формальное образование** - школы, университеты, академии
+- **Неформальное образование** - наставничество, самообразование, гильдии
+- **Магическое образование** - школы магии, академии волшебства
+- **Техническое образование** - профессиональные училища, техникумы
+- **Дистанционное образование** - книги, магические записи, онлайн-курсы
+
+**Агрокультура:**
+
+- **Традиционное земледелие** - ручной труд, сезонные работы
+- **Интенсивное земледелие** - удобрения, механизация, монокультуры
+- **Магическое земледелие** - заклинания роста, магические удобрения
+- **Генная инженерия** - создание новых сортов растений
+- **Синтетическое производство** - искусственное создание продуктов
+
+**Сюжетные возможности:**
+
+- Образование как путь к социальному восхождению
+- Конфликты между традиционным и новым образованием
+- Продовольственные кризисы как движущая сила событий
+- Агрокультура как основа экономики и социальной стабильности
+- Инновации в образовании и агрокультуре как фактор прогресса
+
+### Городское планирование
+
+**Элементы городского планирования:**
+
+- **Жилые районы** - кварталы, микрорайоны, спальные районы
+- **Коммерческие зоны** - рынки, торговые центры, деловые районы
+- **Промышленные зоны** - фабрики, заводы, склады
+- **Инфраструктурные объекты** - дороги, мосты, тоннели
+- **Общественные пространства** - парки, площади, скверы
+
+**Типы планировки:**
+
+- **Органическая** - спонтанное развитие, без четкого плана
+- **Регулярная** - геометрическая сетка улиц
+- **Радиальная** - улицы расходятся от центральной точки
+- **Секторальная** - разделение на функциональные зоны
+- **Магическая** - неевклидова геометрия, изменяющееся пространство
+
+**Сюжетные возможности:**
+
+- Город как отражение социальной структуры общества
+- Конфликты между различными районами города
+- Урбанизация и её последствия
+- Архитектура как выражение культурных ценностей
+- Планировка как инструмент социального контроля
 
 ## Медицина
+
 - Технологии лечения (здесь)
 - Сети учреждений и доступность — см. инфраструктура
-
